+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.6 alpha 3?
=================================

*Release date: XX-XXX-2008*

Core and builtins
-----------------

- Issue #2681: The octal literal ``0o8`` was incorrecly acctepted. Now it
  properly raises a SyntaxError.

- Patch #2617: Reserved -J and -X arguments for Jython, IronPython and other
  implementations of Python. 

Extension Modules
-----------------

- Issue #2670:  Fix a failure in urllib2.build_opener(), when passed two
  handlers that derive the same default base class.

- Added kill, terminate and send_signal(sig) to subprocess.Popen.

- Added phase(z) -> phi, polar(z) -> r, phi and rect(r, phi) -> z to the cmath
  module.

- Four new methods were added to the math and cmath modules:
  acosh, asinh, atanh and log1p. 

- zlib.decompressobj().flush(value) no longer crashes the interpreter when
  passed a value less than or equal to zero.

- Issue #1631171: Re-implement the 'warnings' module in C (the original Python
  code has been kept as backup). This will allow for using the 'warning's
  machinery in such places as the parser where use of pure Python code is not
  possible.

Library
-------

- Issue #2635: Fix bug in 'fix_sentence_endings' textwrap.fill option,
  where an extra space was added after a word containing (but not
  ending in) '.', '!' or '?'.

- Add from_buffer() and from_buffer_copy() class methods to ctypes
  data types

- Issue #2682: ctypes callback functions no longer contain a cyclic
  reference to themselves.

- The getpass module has been improved on Unix.  It now uses /dev/tty
  by default and uses stderr instead of stdout.  A GetPassWarning is
  issued when input echo cannot be controlled.

- Issue #2014: Allow XML-RPC datetime objects to have dates before
  1900-01-01.

- Issue #2439: Added new function pkgutil.get_data(), which is a
  convenience wrapper for the PEP 302 get_data() API.
